[Hotfixed nav action]

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<span></span>
 			</button>
 			<nav class="navbar">
-				<div class="nav-text" data-target="#design-project">portfolio</div>
 				<div class="nav-text" data-target="#workflow">workflow</div>
+				<div class="nav-text" data-target="#design-project">portfolio</div>
 				<div class="nav-text" data-target="#contact-us">contact</div>
 			</nav>
 		</header>
@@ -133,94 +133,7 @@
 			</div>
 		</div>
 
-		<div class="design-project" id="design-project">
-			<h2 class="portfolio-list">設計作品</h2>
-			<div class="style-filter">
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('all')"
-					class="btn btn-selected">
-					全部
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('住宅空間')"
-					class="btn">
-					住宅空間
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('公共設計')"
-					class="btn">
-					公共設計
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('樣品屋')"
-					class="btn">
-					樣品屋
-				</button>
-			</div>
-			<div class="latest-works">
-				<a
-					class="portfolio-size"
-					data-category="住宅空間"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-1/2J7A6799.jpg"
-						alt="Portfolio 1" />
-					<div class="portfolio-name">
-						<p>大隱</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="樣品屋"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-2/2J7A8464.jpg"
-						alt="Portfolio 2" />
-					<div class="portfolio-name">
-						<p>西門綻</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="公共設計"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-3/IMG_3141.JPG"
-						alt="Portfolio 3" />
-					<div class="portfolio-name">
-						<p>東騰介</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="住宅空間"
-					data-aos="zoom-in-up"
-					href="/portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-4/2J7A7668.jpg"
-						alt="Portfolio 4" />
-					<div class="portfolio-name">
-						<p>國王雙子星</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-			</div>
-		</div>
-		<div id="workflow">
+    <div id="workflow">
 			<div class="workflow-section" id="workflow">
 				<h2 class="workflow">工作流程</h2>
 				<img
@@ -514,6 +427,95 @@
 			</div>
 		</div>
 
+		<div class="design-project" id="design-project">
+			<h2 class="portfolio-list">設計作品</h2>
+			<div class="style-filter">
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('all')"
+					class="btn btn-selected">
+					全部
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('住宅空間')"
+					class="btn">
+					住宅空間
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('公共設計')"
+					class="btn">
+					公共設計
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('樣品屋')"
+					class="btn">
+					樣品屋
+				</button>
+			</div>
+			<div class="latest-works">
+				<a
+					class="portfolio-size"
+					data-category="住宅空間"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-1/2J7A6799.jpg"
+						alt="Portfolio 1" />
+					<div class="portfolio-name">
+						<p>大隱</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="樣品屋"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-2/2J7A8464.jpg"
+						alt="Portfolio 2" />
+					<div class="portfolio-name">
+						<p>西門綻</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="公共設計"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-3/IMG_3141.JPG"
+						alt="Portfolio 3" />
+					<div class="portfolio-name">
+						<p>東騰介</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="住宅空間"
+					data-aos="zoom-in-up"
+					href="/portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-4/2J7A7668.jpg"
+						alt="Portfolio 4" />
+					<div class="portfolio-name">
+						<p>國王雙子星</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+			</div>
+		</div>
+		
+
 		<div class="contant-info" id="contact-us">
 			<p>萱源實業有限公司</p>
 			<p>02-2921-7363</p>
@@ -771,22 +773,25 @@
 			navbar.classList.toggle("active");
 			hamburgerMenu.classList.toggle("active");
 		});
-	});
-</script>
 
-<script>
-	document.querySelectorAll(".nav-text").forEach((div) => {
-		div.addEventListener("click", () => {
-			const targetId = div.getAttribute("data-target");
-			const targetElement = document.querySelector(targetId);
-			console.log("Current ---->>>>", targetElement, targetId);
+		document.querySelectorAll(".nav-text").forEach((div) => {
+			div.addEventListener("click", () => {
+				const targetId = div.getAttribute("data-target");
+				const targetElement = document.querySelector(targetId);
 
-			if (targetElement) {
-				targetElement.scrollIntoView({
-					behavior: "smooth",
-					block: "start",
-				});
-			}
+				if (targetElement) {
+					targetElement.scrollIntoView({
+						behavior: "smooth",
+						block: "start",
+					});
+				}
+
+				if (navbar.classList.contains("active")) {
+					navbar.classList.remove("active");
+					hamburgerMenu.classList.remove("active");
+				}
+			});
 		});
 	});
 </script>
+
