--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 		<header>
 			<div class="company">
 				<img class="sy-logo" src="./image/SY-logo.png" alt="SY Logo" />
-				<!-- <div class="logo-box">
-          <abbr data-title="Shiuan Yuan">Shiuan Yuan</abbr>
-        </div> -->
+				<a class="company-title" href="index.html">Shiuan Yuan</a>
+				<div class="logo-box">
+					<abbr data-title="Shiuan Yuan">Shiuan Yuan</abbr>
+				</div>
 			</div>
 			<button class="hamburger-menu" aria-label="Toggle menu">
 				<span></span>
@@ -46,8 +47,8 @@
 				<span></span>
 			</button>
 			<nav class="navbar">
-				<div class="nav-text" data-target="#workflow">workflow</div>
 				<div class="nav-text" data-target="#design-project">portfolio</div>
+				<div class="nav-text" data-target="#workflow">workflow</div>
 				<div class="nav-text" data-target="#contact-us">contact</div>
 			</nav>
 		</header>
@@ -133,8 +134,96 @@
 			</div>
 		</div>
 
-    <div id="workflow">
-			<div class="workflow-section" id="workflow">
+		<div class="design-project" id="design-project">
+			<h2 class="portfolio-list">設計作品</h2>
+			<div class="style-filter">
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('all')"
+					class="btn btn-selected">
+					全部
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('住宅空間')"
+					class="btn">
+					住宅空間
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('公共設計')"
+					class="btn">
+					公共設計
+				</button>
+				<button
+					href="javascript: void(0)"
+					onclick="filterPortfolios('樣品屋')"
+					class="btn">
+					樣品屋
+				</button>
+			</div>
+			<div class="latest-works">
+				<a
+					class="portfolio-size"
+					data-category="住宅空間"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-1/2J7A6799.jpg"
+						alt="Portfolio 1" />
+					<div class="portfolio-name">
+						<p>大隱</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="樣品屋"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-2/2J7A8464.jpg"
+						alt="Portfolio 2" />
+					<div class="portfolio-name">
+						<p>西門綻</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="公共設計"
+					data-aos="zoom-in-up"
+					href="portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-3/IMG_3141.JPG"
+						alt="Portfolio 3" />
+					<div class="portfolio-name">
+						<p>東騰介</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+				<a
+					class="portfolio-size"
+					data-category="住宅空間"
+					data-aos="zoom-in-up"
+					href="/portfolio-1.html">
+					<img
+						class="latest-work-portfolio"
+						src="./image/front cover/Portfolio-4/2J7A7668.jpg"
+						alt="Portfolio 4" />
+					<div class="portfolio-name">
+						<p>國王雙子星</p>
+						<p>Veiw more</p>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<div id="workflow">
+			<div class="workflow-section">
 				<h2 class="workflow">工作流程</h2>
 				<img
 					class="workflow__bg"
@@ -268,8 +357,8 @@
 
 			<div class="page-section workflow-section2">
 				<div class="container">
-					<div class="text-center workflow">
-						<h2 class="section-heading text-uppercase">工作流程</h2>
+					<div class="text-center">
+						<h2 class="section-heading text-uppercase workflow">工作流程</h2>
 					</div>
 					<ul class="timeline">
 						<li>
@@ -427,95 +516,6 @@
 			</div>
 		</div>
 
-		<div class="design-project" id="design-project">
-			<h2 class="portfolio-list">設計作品</h2>
-			<div class="style-filter">
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('all')"
-					class="btn btn-selected">
-					全部
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('住宅空間')"
-					class="btn">
-					住宅空間
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('公共設計')"
-					class="btn">
-					公共設計
-				</button>
-				<button
-					href="javascript: void(0)"
-					onclick="filterPortfolios('樣品屋')"
-					class="btn">
-					樣品屋
-				</button>
-			</div>
-			<div class="latest-works">
-				<a
-					class="portfolio-size"
-					data-category="住宅空間"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-1/2J7A6799.jpg"
-						alt="Portfolio 1" />
-					<div class="portfolio-name">
-						<p>大隱</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="樣品屋"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-2/2J7A8464.jpg"
-						alt="Portfolio 2" />
-					<div class="portfolio-name">
-						<p>西門綻</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="公共設計"
-					data-aos="zoom-in-up"
-					href="portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-3/IMG_3141.JPG"
-						alt="Portfolio 3" />
-					<div class="portfolio-name">
-						<p>東騰介</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-				<a
-					class="portfolio-size"
-					data-category="住宅空間"
-					data-aos="zoom-in-up"
-					href="/portfolio-1.html">
-					<img
-						class="latest-work-portfolio"
-						src="./image/front cover/Portfolio-4/2J7A7668.jpg"
-						alt="Portfolio 4" />
-					<div class="portfolio-name">
-						<p>國王雙子星</p>
-						<p>Veiw more</p>
-					</div>
-				</a>
-			</div>
-		</div>
-		
-
 		<div class="contant-info" id="contact-us">
 			<p>萱源實業有限公司</p>
 			<p>02-2921-7363</p>
@@ -524,6 +524,18 @@
 		</div>
 	</body>
 </html>
+
+<script>
+	document.addEventListener("DOMContentLoaded", function () {
+		const abbrElement = document.querySelector("abbr[data-title]");
+
+		if (abbrElement) {
+			abbrElement.addEventListener("click", function () {
+				window.location.href = "index.html"; // 返回首頁
+			});
+		}
+	});
+</script>
 
 <script>
 	// 隱藏header並在滾動至底部時顯示
@@ -586,7 +598,7 @@
 	});
 </script>
 
-<script>
+<!-- <script>
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.querySelector(".style-filter");
 		const targetSection = document.querySelector("#design-project");
@@ -654,15 +666,244 @@
 			});
 		}
 	});
+</script> -->
+
+<!-- <script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const header = document.querySelector(".style-filter");
+		const targetSection = document.querySelector("#design-project");
+
+		if (header && targetSection) {
+			const styleFilterTop = header.offsetTop;
+			const headerHeight = header.offsetHeight;
+
+			const startThreshold = 0;
+
+			let prevScrollY = window.scrollY;
+			let isSticky = false;
+			let isScrolledUp = false;
+			let isWithinStickyRange = false;
+
+			let lastKnownScrollY = window.scrollY;
+			let ticking = false;
+
+			const updateStickyState = () => {
+				const scrollY = lastKnownScrollY;
+
+				// 移除 endThreshold，直接计算目标部分底部位置
+				const targetSectionBottom =
+					targetSection.offsetTop + targetSection.offsetHeight;
+
+				// 判断是否进入粘性范围
+				const isNowWithinStickyRange =
+					scrollY > styleFilterTop - startThreshold &&
+					scrollY < targetSectionBottom - headerHeight;
+
+				if (isNowWithinStickyRange !== isWithinStickyRange) {
+					isWithinStickyRange = isNowWithinStickyRange;
+					if (!isWithinStickyRange) {
+						header.classList.remove("sticky", "scrolled-up");
+						isSticky = false;
+						isScrolledUp = false;
+					}
+				}
+
+				if (isWithinStickyRange && !isSticky) {
+					isSticky = true;
+					header.classList.add("sticky");
+				} else if (!isWithinStickyRange && isSticky) {
+					isSticky = false;
+				}
+
+				if (isWithinStickyRange) {
+					const isScrollingUp = scrollY < prevScrollY;
+					if (isScrollingUp !== isScrolledUp) {
+						isScrolledUp = isScrollingUp;
+						header.classList.toggle("scrolled-up", isScrolledUp);
+					}
+				}
+
+				prevScrollY = scrollY;
+				ticking = false;
+			};
+
+			window.addEventListener("scroll", () => {
+				lastKnownScrollY = window.scrollY;
+
+				if (!ticking) {
+					ticking = true;
+					requestAnimationFrame(updateStickyState);
+				}
+			});
+		}
+	});
+</script> -->
+
+<!-- <script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const header = document.querySelector(".style-filter");
+		const targetSection = document.querySelector("#design-project");
+
+		if (header && targetSection) {
+			const styleFilterTop = header.offsetTop;
+			const headerHeight = header.getBoundingClientRect().height;
+			const buffer = 123; // 增加緩衝區防止提前取消
+
+			let prevScrollY = window.scrollY;
+			let isSticky = false;
+			let isScrolledUp = false;
+			let isWithinStickyRange = false;
+
+			let lastKnownScrollY = window.scrollY;
+			let ticking = false;
+
+			const updateStickyState = () => {
+				const scrollY = lastKnownScrollY;
+
+				const targetSectionBottom =
+					targetSection.offsetTop + targetSection.offsetHeight;
+
+				const isNowWithinStickyRange =
+					scrollY > styleFilterTop &&
+					scrollY < targetSectionBottom - headerHeight - buffer;
+
+				if (isNowWithinStickyRange !== isWithinStickyRange) {
+					isWithinStickyRange = isNowWithinStickyRange;
+					if (!isWithinStickyRange) {
+						header.classList.remove("sticky", "scrolled-up");
+						isSticky = false;
+						isScrolledUp = false;
+					}
+				}
+
+				if (isWithinStickyRange && !isSticky) {
+					isSticky = true;
+					header.classList.add("sticky");
+				} else if (!isWithinStickyRange && isSticky) {
+					isSticky = false;
+				}
+
+				if (isWithinStickyRange) {
+					const isScrollingUp = scrollY < prevScrollY;
+					if (isScrollingUp !== isScrolledUp) {
+						isScrolledUp = isScrollingUp;
+						header.classList.toggle("scrolled-up", isScrolledUp);
+					}
+				}
+
+				console.log({
+					scrollY,
+					styleFilterTop,
+					targetSectionBottom,
+					headerHeight,
+					isWithinStickyRange,
+				});
+
+				prevScrollY = scrollY;
+				ticking = false;
+			};
+
+			window.addEventListener("scroll", () => {
+				lastKnownScrollY = window.scrollY;
+
+				if (!ticking) {
+					ticking = true;
+					requestAnimationFrame(updateStickyState);
+				}
+			});
+		}
+	});
+</script> -->
+
+<script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const header = document.querySelector(".style-filter");
+		const targetSection = document.querySelector("#design-project");
+
+		if (header && targetSection) {
+			const styleFilterTop = header.offsetTop;
+			const headerHeight = header.getBoundingClientRect().height;
+
+			const enterThreshold = 10;
+			const exitThreshold = 150;
+
+			let prevScrollY = window.scrollY;
+			let isSticky = false;
+			let isScrolledUp = false;
+			let isWithinStickyRange = false;
+
+			let lastToggleTime = 0;
+			const minToggleInterval = 100;
+
+			let lastKnownScrollY = window.scrollY;
+			let ticking = false;
+
+			let debounceTimeout;
+
+			const updateStickyState = () => {
+				const currentTime = Date.now();
+				if (currentTime - lastToggleTime < minToggleInterval) {
+					ticking = false;
+					return;
+				}
+
+				const scrollY = lastKnownScrollY;
+
+				const targetSectionBottom =
+					targetSection.offsetTop + targetSection.offsetHeight;
+
+				const isNowWithinStickyRange =
+					scrollY > styleFilterTop - enterThreshold &&
+					scrollY < targetSectionBottom - headerHeight - exitThreshold;
+
+				if (isNowWithinStickyRange !== isWithinStickyRange) {
+					isWithinStickyRange = isNowWithinStickyRange;
+					if (!isWithinStickyRange) {
+						header.classList.remove("sticky", "scrolled-up");
+						isSticky = false;
+						isScrolledUp = false;
+					}
+				}
+
+				if (isWithinStickyRange && !isSticky) {
+					isSticky = true;
+					header.classList.add("sticky");
+				} else if (!isWithinStickyRange && isSticky) {
+					isSticky = false;
+				}
+
+				if (isWithinStickyRange) {
+					const isScrollingUp = scrollY < prevScrollY;
+					if (isScrollingUp !== isScrolledUp) {
+						isScrolledUp = isScrollingUp;
+						header.classList.toggle("scrolled-up", isScrolledUp);
+					}
+				}
+
+				prevScrollY = scrollY;
+				lastToggleTime = currentTime;
+				ticking = false;
+			};
+
+			window.addEventListener("scroll", () => {
+				lastKnownScrollY = window.scrollY;
+
+				if (!ticking) {
+					clearTimeout(debounceTimeout);
+					debounceTimeout = setTimeout(() => {
+						ticking = true;
+						requestAnimationFrame(updateStickyState);
+					}, 50);
+				}
+			});
+		}
+	});
 </script>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
 	AOS.init({
-		duration: 1800,
-	});
-	document.querySelectorAll(".portfolio-size").forEach((element, index) => {
-		element.setAttribute("data-aos-delay", index * 300);
+		duration: 1500,
 	});
 </script>
 
@@ -691,7 +932,6 @@
 		});
 	};
 
-	// style-filter btn 顯示分類
 	function filterPortfolios(category) {
 		const portfolios = document.querySelectorAll(".portfolio-size");
 		const buttons = document.querySelectorAll(".style-filter .btn");
@@ -701,8 +941,10 @@
 
 			if (category === "all" || portfolioCategory === category) {
 				portfolio.style.display = "block";
+				portfolio.classList.add("aos-animate");
 			} else {
 				portfolio.style.display = "none";
+				portfolio.classList.remove("aos-animate");
 			}
 		});
 
@@ -716,6 +958,8 @@
 		if (selectedButton) {
 			selectedButton.classList.add("btn-selected");
 		}
+
+		AOS.refresh();
 	}
 </script>
 
@@ -743,25 +987,25 @@
 </script>
 
 <!-- abbr -->
-<!-- <script>
-  let abbr = document.querySelector("abbr");
-  abbr.textContent = "";
-  let title = abbr.dataset.title;
-  let words = title.split(" ");
-  words.forEach(word => {
-    let [initial, ...restLetters] = word.split("");
-    let initialSpan = document.createElement("span");
-    initialSpan.textContent = initial;
-    initialSpan.className = "initial";
-    abbr.append(initialSpan);
-    restLetters.forEach(letter => {
-      let hiddenSpan = document.createElement("span");
-      hiddenSpan.textContent = letter;
-      hiddenSpan.className = "hidden";
-      abbr.append(hiddenSpan);
-    });
-  });
-</script> -->
+<script>
+	let abbr = document.querySelector("abbr");
+	abbr.textContent = "";
+	let title = abbr.dataset.title;
+	let words = title.split(" ");
+	words.forEach((word) => {
+		let [initial, ...restLetters] = word.split("");
+		let initialSpan = document.createElement("span");
+		initialSpan.textContent = initial;
+		initialSpan.className = "initial";
+		abbr.append(initialSpan);
+		restLetters.forEach((letter) => {
+			let hiddenSpan = document.createElement("span");
+			hiddenSpan.textContent = letter;
+			hiddenSpan.className = "hidden";
+			abbr.append(hiddenSpan);
+		});
+	});
+</script>
 
 <!-- nav -->
 <script>
@@ -794,4 +1038,3 @@
 		});
 	});
 </script>
-
