index & portfolio RWD update

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					class="portfolio-size"
 					data-category="住宅空間"
 					data-aos="zoom-in-up"
-					href="portfolio-1.html">
+					href="portfolio-dayin.html">
 					<img
 						class="latest-work-portfolio"
 						src="./image/front cover/Portfolio-1/2J7A6799.jpg"
