--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/earlyaccess/cwtexfangsong.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Nabla&display=swap"
-			rel="stylesheet" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Pacifico&family=Tangerine:wght@400;700&family=Zen+Antique&display=swap"
-			rel="stylesheet" />
-		<link
 			href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tangerine:wght@400;700&family=Zen+Antique&display=swap"
 			rel="stylesheet" />
 
@@ -181,7 +172,7 @@
 					class="portfolio-size"
 					data-category="樣品屋"
 					data-aos="zoom-in-up"
-					href="portfolio-1.html">
+					href="portfolio-dayin-test.html">
 					<img
 						class="latest-work-portfolio"
 						src="./image/front cover/Portfolio-2/2J7A8464.jpg"
@@ -815,7 +806,7 @@
 	});
 </script> -->
 
-<script>
+<!-- <script>
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.querySelector(".style-filter");
 		const targetSection = document.querySelector("#design-project");
@@ -872,6 +863,105 @@
 					isSticky = false;
 				}
 
+				if (isWithinStickyRange) {
+					const isScrollingUp = scrollY < prevScrollY;
+					if (isScrollingUp !== isScrolledUp) {
+						isScrolledUp = isScrollingUp;
+						header.classList.toggle("scrolled-up", isScrolledUp);
+					}
+				}
+
+				prevScrollY = scrollY;
+				lastToggleTime = currentTime;
+				ticking = false;
+			};
+
+			window.addEventListener("scroll", () => {
+				lastKnownScrollY = window.scrollY;
+
+				if (!ticking) {
+					clearTimeout(debounceTimeout);
+					debounceTimeout = setTimeout(() => {
+						ticking = true;
+						requestAnimationFrame(updateStickyState);
+					}, 50);
+				}
+			});
+		}
+	});
+</script> -->
+
+<script>
+	document.addEventListener("DOMContentLoaded", () => {
+		const header = document.querySelector(".style-filter");
+		const targetSection = document.querySelector("#design-project");
+		const mainHeader = document.querySelector("header"); // 主 header
+
+		if (header && targetSection && mainHeader) {
+			const styleFilterTop = header.offsetTop;
+			const headerHeight = header.getBoundingClientRect().height;
+
+			const enterThreshold = 10;
+			const exitThreshold = 150;
+
+			let prevScrollY = window.scrollY;
+			let isSticky = false;
+			let isScrolledUp = false;
+			let isWithinStickyRange = false;
+
+			let lastToggleTime = 0;
+			const minToggleInterval = 100;
+
+			let lastKnownScrollY = window.scrollY;
+			let ticking = false;
+
+			let debounceTimeout;
+
+			const getDocHeight = () => document.documentElement.scrollHeight;
+			const getWinHeight = () => window.innerHeight;
+
+			const updateStickyState = () => {
+				const currentTime = Date.now();
+				if (currentTime - lastToggleTime < minToggleInterval) {
+					ticking = false;
+					return;
+				}
+
+				const scrollY = lastKnownScrollY;
+				const targetSectionBottom =
+					targetSection.offsetTop + targetSection.offsetHeight;
+
+				const isAtBottom = scrollY + getWinHeight() >= getDocHeight() - 10;
+
+				const isNowWithinStickyRange =
+					scrollY > styleFilterTop - enterThreshold &&
+					scrollY < targetSectionBottom - headerHeight - exitThreshold;
+
+				// 當滾動到底部時，確保避讓 header
+				if (isAtBottom) {
+					header.classList.add("scrolled-up");
+				} else {
+					header.classList.remove("scrolled-up");
+				}
+
+				// 更新 sticky 狀態
+				if (isNowWithinStickyRange !== isWithinStickyRange) {
+					isWithinStickyRange = isNowWithinStickyRange;
+					if (!isWithinStickyRange) {
+						header.classList.remove("sticky", "scrolled-up");
+						isSticky = false;
+						isScrolledUp = false;
+					}
+				}
+
+				if (isWithinStickyRange && !isSticky) {
+					isSticky = true;
+					header.classList.add("sticky");
+				} else if (!isWithinStickyRange && isSticky) {
+					isSticky = false;
+				}
+
+				// 更新滾動方向
 				if (isWithinStickyRange) {
 					const isScrollingUp = scrollY < prevScrollY;
 					if (isScrollingUp !== isScrolledUp) {
